<resources>
    <string name="app_name">TramWatch</string>
    <string name="main_menu_name">TramWatch - Menu Główne</string>

    <string name="navigation_drawer_open">Otwórz pasek menu</string>
    <string name="navigation_drawer_close">Zamknij pasek menu</string>

    <string name="title_section_1_find_public_transport">Wyszukaj środek transportu z najbliższych przystanków</string>
    <string name="title_section_2_set_notafications">Ustaw powiadomienia</string>
    <string name="title_section_3_about">O aplikacji</string>

    <string name="find_public_transport_title">Odjazdy</string>
    <string name="refresh_data_action_description">Odswież dane</string>
    <string name="refresh_data_alert">Odświeżanie danych...</string>
    <string name="refresh_data_no_GPS">Brak informacji o lokalizacji</string>
    <string name="connection_with_server_error">Błąd połączenia</string>

    <string name="waiting_for_data_text">Oczekiwanie na dane</string>
    <string name="no_additional_info_text">Brak dodatkowych informacji</string>
    <string name="distance_text">Odl. rzecz.:\n</string>
    <string name="approximate_time_text">Rzecz. czas przyjazdu:\n</string>

    <string name="select_stops">Wybierz wyświetlane przystanki</string>
    <string name="select_stops_dialog_fragment_text">Wybierz wyświetlane przystanki</string>
    <string name="select_stops_dialog_fragment_confirm_button_text">Zatwierdź</string>
    <string name="select_stops_no_stops">Lista przystanków jest pusta</string>

    <string name="send_sms_to_friend_dialog_fragment_text">Wyślij powiadomienie sms z danymi o odjeździe</string>
    <string name="send_sms_to_friend_dialog_fragment_confirm_button_text">Zatwierdź</string>
    <string name="send_sms_to_friend_dialog_fragment_cancel_button_text">Anuluj</string>
    <string name="send_sms_to_friend_your_name">Podaj swoje imię:</string>
    <string name="send_sms_to_friend_name">Podaj imię znajomego:</string>
    <string name="send_sms_to_friend_nr">Nr:</string>
    <string name="send_sms_to_friend_our_nr">48789102195</string>
    <string name="send_sms_to_friend_not_filled">Nie wypełniono wszystkich pól obowiązkowych</string>

    <string name="send_sms_to_friend_sending">Wysyłanie...</string>
    <string name="send_sms_to_friend_sending_success">Wysłano!</string>
    <string name="send_sms_to_friend_sending_fail">Błąd połączenia z usługą</string>


</resources>
