<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/send_sms_to_friend_dialog_fragment_text"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/send_sms_to_friend_your_name"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>
        <EditText
            android:id="@+id/send_sms_to_friend_your_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/send_sms_to_friend_name"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>
        <EditText
            android:id="@+id/send_sms_to_friend_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/send_sms_to_friend_nr"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>
        <EditText
            android:id="@+id/send_sms_to_friend_nr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/send_sms_to_friend_our_nr"/>
    </LinearLayout>
</LinearLayout>